# agent-lifecycle-protocol

./: README.md  agent_lifecycle_protocol_whitepaper.md  pyproject.toml
.pytest_cache/v/cache/: nodeids
agent_lifecycle_protocol/: __init__.py  cli.py  decommission.py  fork.py  lifecycle.py  migration.py  registry.py  retraining.py  schema.py  store.py  succession.py
tests/: test_cli.py  test_decommission.py  test_fork.py  test_lifecycle.py  test_migration.py  test_registry.py  test_retraining.py  test_schema.py  test_store.py  test_succession.py
typescript/: README.md  package.json
typescript/src/: decommission.ts  fork.ts  index.ts  lifecycle.ts  migration.ts  registry.ts  retraining.ts  store.ts  succession.ts  types.ts
typescript/tests/: alp.test.ts
