[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lifecycle-protocol"
version = "0.1.0"
description = "Manage agent birth, fork, succession, migration, retraining, and decommission — the lifecycle layer of the Agent Trust Stack"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "AB Support", email = "info@vibeagentmaking.com" },
]
keywords = [
    "agent", "lifecycle", "fork", "succession", "migration",
    "decommission", "lineage", "reputation", "trust",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://vibeagentmaking.com"
Repository = "https://github.com/brycebostick/agent-lifecycle-protocol"
Whitepaper = "https://vibeagentmaking.com/whitepaper/lifecycle-protocol/"

[project.optional-dependencies]
coc = ["chain-of-consciousness>=0.1.0"]
arp = ["agent-rating-protocol>=0.1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
agent-lifecycle = "agent_lifecycle_protocol.cli:main"

[tool.setuptools.packages.find]
include = ["agent_lifecycle_protocol*"]
